test/expected/explain_lc8.out
explain long char8_t x
             ^
14: error: "long char8_t" is illegal for built-in type
